[package]
name = "smooth_blue"
version = "0.1.0"
authors = ["James Munns <james.munns@gmail.com>"]
publish = false
build = "build.rs"

[dependencies]
cortex-m = "0.1.6"
r0 = "0.2.0"

[build-dependencies]
gcc = "0.3.46"

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true