[package]
name = "nrf52dk-sys"
version = "0.1.0"
authors = ["James Munns <james.munns@gmail.com>"]
build = "build.rs"
license = "MIT"
repository = "https://github.com/jamesmunns/nrf52dk-sys"
description = "nrf52 support using the nRF5-SDK and SoftDevice S132"

[dependencies]
cortex-m = "0.1.6"
r0 = "0.2.0"

[build-dependencies]
gcc = "0.3.46"

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true