[package]
name = "nrf52dk-sys"
version = "0.2.0"
authors = ["James Munns <james.munns@gmail.com>"]
build = "build.rs"
license = "MIT"
repository = "https://github.com/jamesmunns/nrf52dk-sys"
description = "nrf52 support using the nRF5-SDK and SoftDevice S132"

[dependencies]
cortex-m = "0.5.2"
cortex-m-rt = "0.5.0"
cortex-m-semihosting = "0.3.0"
panic-semihosting = "0.3.0"

[build-dependencies]
gcc = "0.3.46"

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[features]
default = ["APP_SCHEDULER","APP_TIMER","BLE_ADVERTISING","BUTTON","CLOCK","CRC16","FDS","FSTORAGE","GPIOTE","NRF_BLE_GATT","NRF_LOG","NRF_STRERROR","PEER_MANAGER","UART","UART0"]
APP_GPIOTE = []
APP_PWM = []
APP_SCHEDULER = []
APP_TIMER = []
APP_TWI = []
APP_UART = []
APP_USBD = []
APP_USBD_CLASS_AUDIO = ["APP_USBD"]
APP_USBD_CLASS_CDC_ACM = ["APP_USBD"]
APP_USBD_CLASS_HID = ["APP_USBD"]
APP_USBD_CLASS_MSC = ["APP_USBD"]
APP_USBD_HID_GENERIC = ["APP_USBD"]
APP_USBD_HID_KBD = ["APP_USBD"]
APP_USBD_HID_MOUSE = ["APP_USBD"]
BLE_ADVERTISING = []
BLE_ANCS_C = []
BLE_ANS_C = []
BLE_BAS = []
BLE_BAS_C = ["BLE_BAS"]
BLE_CSCS = []
BLE_CTS_C = []
BLE_DIS = []
BLE_DTM = []
BLE_GLS = []
BLE_HIDS = []
BLE_HRS = []
BLE_HRS_C = ["BLE_HRS"]
BLE_HTS = []
BLE_IAS = []
BLE_IAS_C = ["BLE_IAS"]
BLE_LBS = []
BLE_LBS_C = ["BLE_LBS"]
BLE_LLS = []
BLE_NUS = []
BLE_NUS_C = ["BLE_NUS"]
BLE_RACP = []
BLE_RSCS = []
BLE_RSCS_C = ["BLE_RSCS"]
BLE_TPS = []
BUTTON = []
CLOCK = []
COMP = []
CRC16 = []
CRC32 = []
ECC = []
EGU = []
FDS = []
FSTORAGE = []
GPIOTE = []
HARDFAULT_HANDLER = []
HCI_MEM_POOL = []
HCI_SLIP = []
HCI_TRANSPORT = []
I2S = []
LED_SOFTBLINK = []
LOW_POWER_PWM = []
LPCOMP = []
MEM_MANAGER = []
NRF_BLE_GATT = []
NRF_BLE_QWR = []
NRF_CSENSE = []
NRF_DRV_CSENSE = []
NRF_LOG = []
NRF_QUEUE = []
NRF_STRERROR = []
PDM = []
PEER_MANAGER = []
PERIPHERAL_RESOURCE_SHARING = []
POWER = []
PPI = []
PWM = []
PWM0 = ["PWM"]
PWM1 = ["PWM"]
PWM2 = ["PWM"]
PWM_NRF52_ANOMALY_109_WORKAROUND = ["PWM"]
QDEC = []
RNG = []
RTC = []
RTC0 = ["RTC"]
RTC1 = ["RTC"]
RTC2 = ["RTC"]
SAADC = []
SLIP = []
SPI = []
SPI0 = ["SPI"]
SPI1 = ["SPI"]
SPI2 = ["SPI"]
SPIM_NRF52_ANOMALY_109_WORKAROUND = ["SPI"]
SPIS = ["SPI"]
SPIS0 = ["SPI"]
SPIS1 = ["SPI"]
SPIS2 = ["SPI"]
SPIS_NRF52_ANOMALY_109_WORKAROUND = ["SPI"]
TIMER = []
TIMER0 = ["TIMER"]
TIMER1 = ["TIMER"]
TIMER2 = ["TIMER"]
TIMER3 = ["TIMER"]
TIMER4 = ["TIMER"]
TWI = []
TWI0 = ["TWI"]
TWI1 = ["TWI"]
TWIM_NRF52_ANOMALY_109_WORKAROUND = ["TWI"]
TWIS = ["TWI"]
TWIS0 = ["TWI"]
TWIS1 = ["TWI"]
UART = []
UART0 = ["UART"]
USBD = []
WDT = []

